--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <!-- You can change the theme colors from here -->
     <link
       href="assets/css/colors/default-dark.css"
-      id="theme"
+      id="tema"
       rel="stylesheet"
     />
 
